Creacion del footer

--- a/index.html
+++ b/index.html
@@ -255,8 +255,10 @@
           </ul>
         </section>
       </main>
-      <footer class="footer"></footer>
     </div>
+    <footer class="footer">
+      <p class="footer__title">© 2023. David V. Vidal V.</p>
+    </footer>
     <script
       src="https://kit.fontawesome.com/38456b6928.js"
       crossorigin="anonymous"
