--- a/index.html
+++ b/index.html
@@ -97,161 +97,35 @@
           </section>
 
           <ul class="elements">
-            <li class="card">
-              <div class="card__image-container">
-                <img
-                  class="card__imagen"
-                  src="./imagenes/vayy-de-yosemite.jpg"
-                  alt="Valle de Yosemite"
-                />
-              </div>
-              <div class="card__contenido">
-                <div class="card__info">
-                  <p class="card__title">Valle de Yosemite</p>
+           
+            <template>
+              <li class="card">
+                <div class="card__image-container">
                   <img
-                    class="card__imagen-corazon"
-                    src="./imagenes/me_gusta.svg"
-                    alt="icono corazon"
-                  />
-                  <img
-                    class="card__me-gusta"
-                    src="./imagenes/me_gusta_negro.svg"
-                    alt="icono corazon"
+                    class="card__imagen"
+                    src="./imagenes/vayy-de-yosemite.jpg"
+                    alt="Valle de Yosemite"
                   />
                 </div>
-              </div>
-              <i class="fa-solid fa-trash card__trash"></i>
-            </li>
+                <div class="card__contenido">
+                  <div class="card__info">
+                    <p class="card__title">Valle de Yosemite</p>
+                    <img
+                      class="card__imagen-corazon"
+                      src="./imagenes/me_gusta.svg"
+                      alt="icono corazon"
+                    />
+                    <img
+                      class="card__me-gusta"
+                      src="./imagenes/me_gusta_negro.svg"
+                      alt="icono corazon"
+                    />
+                  </div>
+                </div>
+                <i class="fa-solid fa-trash card__trash"></i>
+              </li>
+            </template>
 
-            <li class="card">
-              <div class="card__image-container">
-                <img
-                  class="card__imagen"
-                  src="./imagenes/lago-louise.png"
-                  alt="Lago Louise"
-                />
-              </div>
-              <div class="card__contenido">
-                <div class="card__info">
-                  <p class="card__title">Lago Louise</p>
-                  <img
-                    class="card__imagen-corazon"
-                    src="./imagenes/me_gusta.svg"
-                    alt="icono corazon"
-                  />
-                  <img
-                    class="card__me-gusta"
-                    src="./imagenes/me_gusta_negro.svg"
-                    alt="icono corazon"
-                  />
-                </div>
-              </div>
-              <i class="fa-solid fa-trash card__trash"></i>
-            </li>
-
-            <li class="card">
-              <div class="card__image-container">
-                <img
-                  class="card__imagen"
-                  src="./imagenes/calvas.png"
-                  alt="Montañas Calvas"
-                />
-              </div>
-              <div class="card__contenido">
-                <div class="card__info">
-                  <p class="card__title">Montañas Calvas</p>
-                  <img
-                    class="card__imagen-corazon"
-                    src="./imagenes/me_gusta.svg"
-                    alt="icono corazon"
-                  />
-                  <img
-                    class="card__me-gusta"
-                    src="./imagenes/me_gusta_negro.svg"
-                    alt="icono corazon"
-                  />
-                </div>
-              </div>
-              <i class="fa-solid fa-trash card__trash"></i>
-            </li>
-
-            <li class="card">
-              <div class="card__image-container">
-                <img
-                  class="card__imagen"
-                  src="./imagenes/moab.jpg"
-                  alt="Moab, Utah"
-                />
-              </div>
-              <div class="card__contenido">
-                <div class="card__info">
-                  <p class="card__title">Moab, Utah</p>
-                  <img
-                    class="card__imagen-corazon"
-                    src="./imagenes/me_gusta.svg"
-                    alt="icono corazon"
-                  />
-                  <img
-                    class="card__me-gusta"
-                    src="./imagenes/me_gusta_negro.svg"
-                    alt="icono corazon"
-                  />
-                </div>
-              </div>
-              <i class="fa-solid fa-trash card__trash"></i>
-            </li>
-
-            <li class="card">
-              <div class="card__image-container">
-                <img
-                  class="card__imagen"
-                  src="./imagenes/karthik-sreenivas-aLMpxpG1wL0-unsplash.jpg"
-                  alt="Asheville, NC, USA"
-                />
-              </div>
-              <div class="card__contenido">
-                <div class="card__info">
-                  <p class="card__title">Asheville, NC, USA</p>
-                  <img
-                    class="card__imagen-corazon"
-                    src="./imagenes/me_gusta.svg"
-                    alt="icono corazon"
-                  />
-                  <img
-                    class="card__me-gusta"
-                    src="./imagenes/me_gusta_negro.svg"
-                    alt="icono corazon"
-                  />
-                </div>
-              </div>
-              <i class="fa-solid fa-trash card__trash"></i>
-            </li>
-
-            <li class="card">
-              <div class="card__image-container">
-                <img
-                  class="card__imagen"
-                  src="./imagenes/iris-papillon-FuxRM_jOFHY-unsplash.jpg"
-                  alt="Big Sur, United States"
-                />
-              </div>
-              <div class="card__contenido">
-                <div class="card__info">
-                  <p class="card__title">Big Sur, United States</p>
-                  <img
-                    class="card__imagen-corazon"
-                    src="./imagenes/me_gusta.svg"
-                    alt="icono corazon"
-                  />
-                  <img
-                    class="card__me-gusta"
-                    src="./imagenes/me_gusta_negro.svg"
-                    alt="icono corazon"
-                  />
-                </div>
-              </div>
-              <i class="fa-solid fa-trash card__trash"></i>
-            </li>
           </ul>
         </section>
       </main>
