fix megust and add new image

--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
                 alt="icon cerrar"
               />
               <h2 class="popup__title">Nuevo lugar</h2>
-              <input class="popup__input popup__input-titulo" type="text" placeholder="Titulo" />
+              <input
+                class="popup__input popup__input-titulo"
+                type="text"
+                placeholder="Titulo"
+              />
               <input
                 class="popup__input popup__input-link"
                 type="text"
@@ -98,7 +102,7 @@
 
           <ul class="elements"></ul>
 
-          <template class="template__card">
+          <template class="template-card">
             <li class="card">
               <div class="card__image-container">
                 <img class="card__imagen" src=" " alt=" " />
@@ -106,7 +110,9 @@
               <div class="card__contenido">
                 <div class="card__info">
                   <p class="card__title"></p>
-                  <i class="fa-regular fa-heart card__imagen-corazon"></i>
+                  <!-- <i class="fa-regular fa-heart card__imagen-corazon"></i> -->
+                  <img src="./imagenes/me_gusta.svg" alt="imagen corazon" class="card__imagen-corazon">
+                  <img src="./imagenes/me_gusta_negro.svg" alt="imagen corazon" class="card__imagen-corazon card__imagen-corazon_solid">
                 </div>
               </div>
               <i class="fa-solid fa-trash card__trash"></i>
