--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
       </main>
     </div>
     <footer class="footer">
-      <p class="footer__title">© 2023. David V. Vidal V.</p>
+      <p class="footer__title">&copy; 2023. David V. Vidal V.</p>
     </footer>
     <script
       src="https://kit.fontawesome.com/38456b6928.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/data/imagenes.js"></script>
-    <script src="./js/js.js"></script>
+    <script src="./pages/consts.js"></script>
+    <script src="./pages/index.js"></script>
   </body>
 </html>
