SEGUNDA CORRECION AUTOMATICA

--- a/index.html
+++ b/index.html
@@ -111,8 +111,16 @@
                 <div class="card__info">
                   <p class="card__title"></p>
                   <!-- <i class="fa-regular fa-heart card__imagen-corazon"></i> -->
-                  <img src="./imagenes/me_gusta.svg" alt="imagen corazon" class="card__imagen-corazon">
-                  <img src="./imagenes/me_gusta_negro.svg" alt="imagen corazon" class="card__imagen-corazon card__imagen-corazon_solid">
+                  <img
+                    src="./imagenes/me_gusta.svg"
+                    alt="imagen corazon"
+                    class="card__imagen-corazon"
+                  />
+                  <img
+                    src="./imagenes/me_gusta_negro.svg"
+                    alt="imagen corazon"
+                    class="card__imagen-corazon card__imagen-corazon_solid"
+                  />
                 </div>
               </div>
               <i class="fa-solid fa-trash card__trash"></i>
