--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
       <main class="content">
         <section class="profile">
           <section class="popup popup_perfil">
-            <form
-              class="popup__container popup__formPerfil"
-              name="form"
-              id="form"
-            >
+            <form class="popup__form popup__formPerfil" name="form" id="form" novalidate>
               <img
                 class="btnCerrar popup__button-cerrar-perfil"
                 src="./imagenes/Close-Icon.svg"
@@ -27,14 +23,22 @@
               />
               <h2 class="popup__title">Editar Perfil</h2>
               <input
+                id="nombre-input"
                 class="popup__input popup__input_nombre"
                 type="text"
                 placeholder="Nombre"
+                minlength="2"
+                maxlength="40"
+                required
               />
               <input
+                id="aboutMe-input"
                 class="popup__input popup__input_about-me"
                 type="text"
                 placeholder="Acerca de mi"
+                minlength="2"
+                maxlength="200"
+                required
               />
               <input
                 class="popup__submit popup__submit_perfil"
@@ -75,7 +79,7 @@
 
         <section>
           <section class="popup popup_Element">
-            <form class="popup__container popup__formElement">
+            <form class="popup__form popup__formElement" novalidate>
               <img
                 class="btnCerrar popup__button-cerrar-places"
                 src="./imagenes/Close-Icon.svg"
@@ -83,14 +87,20 @@
               />
               <h2 class="popup__title">Nuevo lugar</h2>
               <input
+              id="titulo-input"
                 class="popup__input popup__input-titulo"
                 type="text"
                 placeholder="Titulo"
+                minlength="2"
+                maxlength="30"
+                required
               />
               <input
+              id="url-input"
                 class="popup__input popup__input-link"
-                type="text"
+                type="url"
                 placeholder="Enlace a la Imagen"
+                required
               />
               <input
                 class="popup__submit popup__submit_Element"
@@ -134,5 +144,6 @@
     </footer>
     <script src="./pages/consts.js"></script>
     <script src="./pages/index.js"></script>
+    <script src="./pages/validate.js"></script>
   </body>
 </html>
