--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
     <footer class="footer">
       <p class="footer__title">&copy; 2023. David V. Vidal V.</p>
     </footer>
+    <script
+      src="https://kit.fontawesome.com/38456b6928.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./pages/consts.js"></script>
     <script src="./pages/index.js"></script>
   </body>
