--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       </main>
     </div>
     <div class="overlay-image">
-      <div class="overlay-image__image"></div>
+      <div class="overlay-image__container"></div>
     </div>
     <footer class="footer">
       <p class="footer__title">&copy; 2023. David V. Vidal V.</p>
@@ -154,8 +154,8 @@
       src="https://kit.fontawesome.com/38456b6928.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./pages/consts.js"></script>
-    <script src="./pages/index.js"></script>
-    <script src="./pages/validate.js"></script>
+    <script src="./pages/scripts/consts.js"></script>
+    <script src="./pages/scripts/index.js"></script>
+    <script src="./pages/scripts/validate.js"></script>
   </body>
 </html>
