card class ready

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
       src="https://kit.fontawesome.com/38456b6928.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./pages/scripts/consts.js"></script>
-    <script src="./pages/scripts/index.js"></script>
-    <script src="./pages/scripts/validate.js"></script>
+    <!-- <script src="./pages/scripts/consts.js"></script> -->
+    <script src="./pages/scripts/index.js" type="module"></script>
+    <!-- <script src="./pages/scripts/validate.js"></script> -->
   </body>
 </html>
