--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 minlength="2"
                 maxlength="40"
                 required
+                name="nombre"
               />
               <input
                 id="aboutMe-input"
@@ -44,6 +45,7 @@
                 minlength="2"
                 maxlength="200"
                 required
+                name="about"
               />
               <input
                 class="popup__submit popup__submit_perfil"
@@ -99,6 +101,7 @@
                 minlength="2"
                 maxlength="30"
                 required
+                name="titulo"
               />
               <input
                 id="url-input"
@@ -106,6 +109,7 @@
                 type="url"
                 placeholder="Enlace a la Imagen"
                 required
+                name="url"
               />
               <input
                 class="popup__submit popup__submit_Element"
@@ -144,7 +148,7 @@
         </section>
       </main>
     </div>
-    <div class="overlay-image">
+    <div class="popup overlay-image">
       <div class="overlay-image__container"></div>
     </div>
     <footer class="footer">
