--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 minlength="2"
                 maxlength="200"
                 required
-                name="about"
+                name="job"
               />
               <input
                 class="popup__submit popup__submit_perfil"
