add place ready

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 minlength="2"
                 maxlength="30"
                 required
-                name="titulo"
+                name="name"
               />
               <input
                 id="url-input"
@@ -109,7 +109,7 @@
                 type="url"
                 placeholder="Enlace a la Imagen"
                 required
-                name="url"
+                name="link"
               />
               <input
                 class="popup__submit popup__submit_Element"
