--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
+
     <title>Alrededor de los EE.UU.</title>
   </head>
   <body>
     <div class="page">
       <header class="header">
-        <img class="logo" src="./imagenes/logo.svg" alt="Logo around the US" />
+        <img class="logo" src="<%=require('../src/images/logo.svg')%>" alt="Logo around the US" />
       </header>
       <main class="content">
         <section class="profile">
           <section class="popup popup_perfil">
+
             <form
               class="popup__form popup__formPerfil"
               name="form"
@@ -23,7 +24,7 @@
             >
               <img
                 class="btnCerrar popup__button-cerrar-perfil"
-                src="./imagenes/Close-Icon.svg"
+                src="<%=require('../src/images/Close-Icon.svg')%>"
                 alt="icon cerrar"
               />
               <h2 class="popup__title">Editar Perfil</h2>
@@ -59,7 +60,7 @@
             <div class="profile__avatar">
               <img
                 class="profile__imagen"
-                src="./imagenes/image.jpg"
+                src="<%=require('../src/images/profile.jpg')%>"
                 alt="Jacques Cousteau"
               />
             </div>
@@ -68,7 +69,7 @@
               <div class="profile__contenedor-titulo">
                 <h1 class="profile__title">Jacques Cousteau</h1>
                 <button type="button" class="edit-button">
-                  <img src="./imagenes/Edit-Button.svg" alt="edit button" />
+                  <img src="<%=require('../src/images/Edit-Button.svg')%>" alt="edit button" />
                 </button>
               </div>
               <p class="profile__subtitle">Explorador</p>
@@ -78,7 +79,7 @@
           <div class="profile__button">
             <img
               class="add-button"
-              src="./imagenes/Add-Button.svg"
+              src="<%=require('../src/images/Add Button.png')%>"
               alt="icono boton agregar"
             />
           </div>
@@ -89,7 +90,7 @@
             <form class="popup__form popup__formElement" novalidate>
               <img
                 class="btnCerrar popup__button-cerrar-places"
-                src="./imagenes/Close-Icon.svg"
+                src="<%=require('../src/images/Close-Icon.svg')%>"
                 alt="icon cerrar"
               />
               <h2 class="popup__title">Nuevo lugar</h2>
@@ -131,12 +132,12 @@
                   <p class="card__title"></p>
                   <!-- <i class="fa-regular fa-heart card__imagen-corazon"></i> -->
                   <img
-                    src="./imagenes/me_gusta.svg"
+                    src="<%=require('../src/images/me_gusta.svg')%>"
                     alt="imagen corazon"
                     class="card__imagen-corazon"
                   />
                   <img
-                    src="./imagenes/me_gusta_negro.svg"
+                    src="<%=require('../src/images/me_gusta_negro.svg')%>"
                     alt="imagen corazon"
                     class="card__imagen-corazon card__imagen-corazon_solid"
                   />
@@ -159,7 +160,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- <script src="./pages/scripts/consts.js"></script> -->
-    <script src="./pages/scripts/index.js" type="module"></script>
+    <!-- <script src="./pages/scripts/index.js" type="module"></script> -->
     <!-- <script src="./pages/scripts/validate.js"></script> -->
   </body>
 </html>
